More partial work

--- a/lib/stdlib/test/ets_SUITE_data/visualize_throughput.html
+++ b/lib/stdlib/test/ets_SUITE_data/visualize_throughput.html
@@ -42,7 +42,7 @@
     </p>
     Paste the generated data in the field below and press the Render button:
     <br>
-    <textarea id="dataField" rows="4" cols="50"></textarea> 
+    <textarea id="dataField" rows="4" cols="50">#bench_data_placeholder</textarea> 
     <br>
     <input type="checkbox" id="barPlot"> Bar Plot
     <br>
